--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -986,12 +986,12 @@ section {
 }
 
 #portfolio .portfolio-item figure {
-  background: #000;
+  background: #f2f5f3;
   overflow: hidden;
-  height: 240px;
+  height: 200px;
   position: relative;
-  border-radius: 4px 4px 0 0;
-  margin: 0;
+  border-radius: 6px 6px 0 0;
+  margin: 10;
 }
 
 #portfolio .portfolio-item figure:hover img {
@@ -1056,7 +1056,7 @@ section {
   background: #fff;
   text-align: center;
   padding: 30px;
-  height: 90px;
+  height: 200px;
   border-radius: 0 0 3px 3px;
 }
 
@@ -1079,10 +1079,11 @@ section {
 #portfolio .portfolio-item .portfolio-info p {
   padding: 0;
   margin: 0;
-  color: #b8b8b8;
+  color: #000000;
   font-weight: 500;
   font-size: 14px;
   text-transform: uppercase;
+  text-align: left; /* Teks akan menjadi rata kiri */
 }
 
 /*--------------------------------------------------------------
